--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.17.0",
 		"bcrypt": "^5.1.1",
+		"chart.js": "^4.4.3",
 		"dotenv": "^16.4.5",
 		"jsonwebtoken": "^9.0.2",
 		"neucron-sdk": "^0.2.3"
