--- a/package.json
+++ b/package.json
@@ -3,43 +3,44 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-	  "dev": "vite dev",
-	  "build": "prisma generate && vite build",
-	  "preview": "vite preview",
-	  "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-	  "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-	  "lint": "prettier --check . && eslint .",
-	  "format": "prettier --write ."
+		"dev": "vite dev",
+		"build": "prisma generate && vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-	  "@sveltejs/adapter-auto": "^3.0.0",
-	  "@sveltejs/kit": "^2.0.0",
-	  "@sveltejs/vite-plugin-svelte": "^3.0.0",
-	  "@types/bcrypt": "^5.0.2",
-	  "@types/eslint": "^9.6.0",
-	  "@types/jsonwebtoken": "^9.0.6",
-	  "autoprefixer": "^10.4.19",
-	  "eslint": "^9.0.0",
-	  "eslint-config-prettier": "^9.1.0",
-	  "eslint-plugin-svelte": "^2.36.0",
-	  "globals": "^15.0.0",
-	  "postcss": "^8.4.40",
-	  "prettier": "^3.1.1",
-	  "prettier-plugin-svelte": "^3.1.2",
-	  "prisma": "^5.17.0",
-	  "svelte": "^4.2.7",
-	  "svelte-check": "^3.6.0",
-	  "tailwindcss": "^3.4.6",
-	  "typescript": "^5.0.0",
-	  "typescript-eslint": "^8.0.0-alpha.20",
-	  "vite": "^5.0.3"
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/bcrypt": "^5.0.2",
+		"@types/eslint": "^9.6.0",
+		"@types/jsonwebtoken": "^9.0.6",
+		"@types/uuid": "^10.0.0",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"postcss": "^8.4.40",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"prisma": "^5.18.0",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.6",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0-alpha.20",
+		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-	  "@prisma/client": "^5.17.0",
-	  "bcrypt": "^5.1.1",
-	  "jsonwebtoken": "^9.0.2",
-	  "neucron-sdk": "^0.2.3"
+		"@prisma/client": "^5.18.0",
+		"bcrypt": "^5.1.1",
+		"jsonwebtoken": "^9.0.2",
+		"neucron-sdk": "^0.2.3",
+		"uuid": "^10.0.0"
 	}
-  }
-  
+}
